tests/ui/comptime/trait_bounds.stderr
error[E0277]: the trait bound `T: const Trait` is not satisfied
  --> $DIR/trait_bounds.rs:14:5
   |
LL |     T::method()
   |     ^

error[E0277]: the trait bound `T: const Trait` is not satisfied
  --> $DIR/trait_bounds.rs:20:5
   |
LL |     T::method()
   |     ^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
